grammar.js
        source_file: $ => repeat(seq($.statement, optional(';'))),

        /* top_level_declarations: $ => choice(
            $.procedure_declaration,
            $.struct_declaration,
            $.enum_declaration,
            $.static_if_statement,

            $.run_statement,
            $.compiler_directive,

            $.using_statement,
            $.module_parameters,
            seq($.compiler_directive, $.string),
            seq($.declarations_that_require_a_semicolon, ';'),
        ), */

        declarations_that_require_a_semicolon: $ => choice(
            $.module_parameters,
            $.assert_statement,
            $.placeholder_declaration,
            $.const_declaration,
            $.variable_declaration,
            $.import,
            $.load,
            $.call_expression, // this could be a macro call in global scope.
        ),

        // In procedure scopes
        const_declaration: $ => seq(
            prec.right(field('name', comma_sep1($.identifier))),
            // optional(','),
            ':',
            optional(field('type', $.types)),
            ':',
            prec.right(comma_sep1(
                choice($.expressions, $.types),
            )),
            // optional(','),
        ),

        identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

        integer: _ =>
            choice(
                token(seq('0', choice("b", "B"), optional('_'), BIN_INT)),
                token(seq('0', choice("o", "O"), optional('_'), OCT_INT)),
                token(seq('0', choice("x", "X"), optional('_'), HEX_INT)),
                token(DEC_INT),
            ),
